# ModernVisitorDesignPattern

./: .gitignore  CMakeLists.txt
src/: ModernVisitor.cpp
